fix: add compiler packages to test requirements
cmake-package-check needs compilers: gcc/gxx on linux, clang/clangxx
on macOS.

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -39,6 +39,13 @@ tests:
     requirements:
       run:
         - cmake-package-check
+        - if: linux
+          then:
+            - gcc_linux-64
+            - gxx_linux-64
+          else:
+            - clang
+            - clangxx
 
 about:
   homepage: https://laura.hepforge.org/
